# 433Project

./: .gitignore  README.md  package-lock.json
bazel_project_build/: BUILD  hand_tracking_custom.pbtxt  main.cpp
bazel_project_build/app/: BUILD  RoomManager.cpp  RoomManager.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketReceiver.cpp  WebSocketReceiver.h  gesture.cpp  gesture.h  hand_recognition.cpp  hand_recognition.hpp  lcd_display.c  lcd_display.h  protocol_callback.cpp
bazel_project_build/hal/: BUILD  camera_hal.cpp  camera_hal.h  gpio.h  rotary_press_statemachine.h
bazel_project_build/lcd/: BUILD
bazel_project_build/lcd/lib/Config/: DEV_Config.c  DEV_Config.h
bazel_project_build/lcd/lib/Fonts/: fonts.h
bazel_project_build/lcd/lib/LCD/: LCD_1in54.c  LCD_1in54.h
bazel_project_build/lgpio/: lgExec.c
gesture-recognition-app/: .gitignore  CMakeLists.txt  README.md
gesture-recognition-app/app/: CMakeLists.txt
gesture-recognition-app/app/include/: RoomManager.h  WebSocketClient.h  gesture.h  room_manager.h  udp_receiver.h  udp_sender.h  udp_server.h
gesture-recognition-app/app/src/: RoomManager.cpp  UDPSender.h  WebSocketClient.cpp  gesture.cpp  main.cpp  room_manager.cpp  udp_receiver.cpp  udp_sender.cpp  udp_server.cpp
gesture-recognition-app/hal/: CMakeLists.txt
gesture-recognition-app/hal/src/: camera_hal.cpp
gesture-tower-server/: .env.example  .gitignore  package-lock.json  package.json
gesture-tower-server/src/: cardManager.ts  gameManager.ts  main.ts  messaging.ts  roomManager.ts  server.ts  types.ts  webSocketManager.ts
mediapipe/bazel_project_build/: BUILD  build_and_copy.sh  hand_tracking_custom.pbtxt  main.cpp
mediapipe/bazel_project_build/app/: BUILD  BUILD.bak  DisplayManager.cpp  DisplayManager.h  GameState.cpp  GameState.h  GestureDetector.cpp  GestureDetector.h  GestureEventSender.cpp  GestureEventSender.h  MessageHandler.cpp  MessageHandler.h  RoomManager.cpp  RoomManager.h  SoundManager.c  SoundManager.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketReceiver.cpp  audioMixer.c  audioMixer.h  gesture.cpp  gesture.h  hand_recognition.cpp  hand_recognition.hpp  lcd_display.c  lcd_display.h  periodTimer.c  periodTimer.h
mediapipe/bazel_project_build/hal/: BUILD  gpio.c  joystick.cpp  joystick.h  joystick_press.cpp  joystick_press.h  rotary_press_statemachine.c
mediapipe/bazel_project_build/lcd/lib/Config/: DEV_Config.c
mediapipe/bazel_project_build/lcd/lib/GUI/: GUI_Paint.h
mediapipe/bazel_project_build/lgpio/: BUILD  lgGpio.c  lgPthTx.c  lgUtil.c
mediapipe/mediapipe/calculators/tensor/: inference_feedback_manager.cc
mediapipe_files/: BUILD  hand_recognition.cpp  hand_tracking_custom.pbtxt  m2demo.cpp
web-version/: README.md  next.config.mjs  package-lock.json  package.json
web-version/app/: globals.css  layout.tsx  page.tsx
web-version/app/components/: Background.tsx  CreateRoomForm.tsx  JoinRoomForm.tsx  RoomList.tsx  TitleScreen.tsx  UdpMessageDisplay.tsx  ViewRoomForm.tsx
web-version/app/components/game/: AttackAnimation.tsx  BackButton.tsx  CenterDivider.tsx  DebugControls.tsx  EventLogger.tsx  ExplosionEffect.tsx  GameAnimation.tsx  GameBackground.tsx  GameControls.tsx  GameEndDisplay.tsx  GameEventHandler.tsx  GameInitializer.tsx  GameLoader.tsx  GameStateDisplay.tsx  GestureDisplay.tsx  GestureTowerTitle.tsx  Player.tsx  PlayerDisplay.tsx  PlayerGestureDisplay.tsx  RoomInfo.tsx  RoundDisplay.tsx  RoundInfo.tsx  RoundTransitionHandler.tsx  RulesButton.tsx  RulesScroll.tsx  Shield.tsx  ShieldButtons.tsx  ShieldEffect.tsx  SpriteAnimation.tsx  TowerBlock.tsx  TowerBlocks.tsx  TowerControls.tsx  TowerDisplay.tsx
web-version/app/components/room/: PlayerList.tsx  RoomActions.tsx  RoomHeader.tsx  RoomHelpers.ts
web-version/app/debug/: page.tsx
web-version/app/game/[id]/: page.tsx
web-version/app/game/[id]/play/: page.tsx
web-version/app/lib/: constants.ts  store.ts  websocket.ts
web-version/app/lib/game/: store.ts
web-version/app/lib/room/: store.ts
web-version/app/lib/types/: common.ts  game.ts  index.ts  room.ts
web-version/app/lib/utils/: SoundManager.ts
web-version/app/rooms/[id]/: page.tsx
web-version/app/styles/: animations.css
web-version/app/test-game/: page.tsx  types.d.ts
web-version/app/testGame/: page.tsx
